# insurance-nested-glm

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: nested_glm_demo.py
src/insurance_nested_glm/: __init__.py  _utils.py  embedding.py  glm.py  pipeline.py  territory.py
tests/: test_embedding.py  test_glm.py  test_pipeline.py  test_territory.py  test_utils.py
